# timetrack-odoo

./: .gitignore  DEVGUIDE.md  FEATURES.md  HISTORY.md  INFO.TXT  Makefile  README.md  RELEASENOTES.md  dayrange.py  dayrange.tests.py  dotgitconfig.py  dotnetrc.py  dotnetrc.setup.md  dotnetrc.tests.py  fracfloat.py  fracfloat.tests.py  gitrc.py  jira2data.py  jira2data.setup.md  jira2data_api.py  jira2data_api_mockup.py  jira_rest.py  jira_rest_mockup.py  netrc.py  netrc.setup.md  netrc.tests.py  odoo2data.py  odoo2data.setup.md  odoo2data.tests.py  odoo2data_api.py  odoo2data_api.setup.md  odoo2data_api_mockup.py  odoo2data_jsonrpc.py  odoo2data_web_api.py  odoo2data_xmlrpc.py  odoo_rest.py  odoo_rest_mockup.py  odoo_xmlrpc.py  odootopic.py  odootopic.tests.py  (+28 more)
.github/workflows/: stylecheck.yml  typecheck.yml  unittests.yml
