# __version__

[metadata]
name = timetrack-odoo
version = 1.1.3312
license = APL
license_files = 
   LICENSE
author = Guido U. Draheim
author-email = Guido.Draheim@gmx.de
home-page = https://github.com/gdraheim/timetrack-odoo
description = Synchronize odoo-import data with Odoo Timesheet and Jira Worklogs
long-description = file: README
long-description-content-type = text/markdown
requires-dist = setuptools

[options]
include_package_data=True
install_requires =
  requests
  openpyxl
scripts =
  dotgitconfig.py
  dotnetrc.py
  jira2data_api.py
  jira2data.py
  odoo2data_api.py
  odoo2data.py
  odootopic.py
  tabtools.py
  tabtotext.py
  tabtoxlsx.py
  timerange.py
  timetrack.py
  zeit2jira.py
  zeit2json.py
  zeit2odoo.py

[options.data_files]
data =
   LICENSE
   README.md

[bdist_wheel]
universal = 1

[pycodestyle]
max-line-length = 127
ignore = E301,E302,E305,E306,E701,E704
# E301 Add missing blank line. (expected 1 blank line, found 0)
# E302 Add missing 2 blank lines. (expected 2 blank lines, found 0)
# E305 - (expected 2 blank lines after end of function or class)
# E306 - (expected 1 blank line before a nested definition)
# E701 Put colon-separated compound statement on separate lines. (multiple statements on one line (colon))
# E704 Fix multiple statements on one line def (multiple statements on one line (semicolon))

[mypy]
## strict = true # not allowed in setup.cfg
unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true 
disallow_incomplete_defs = true 
check_untyped_defs = true
disallow_untyped_decorators = true 
no_implicit_optional = true 
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
## extra:
disallow_any_unimported = true
# disallow_any_expr = true
disallow_any_decorated = true
#? disallow_any_explicit = true
